--- a/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/deployment.yaml.j2
@@ -4,21 +4,20 @@ metadata:
   name: mailhog
   namespace: {{ mailhog.namespace }}
   labels:
-    app.kubernetes.io/name: mailhog
-    app.kubernetes.io/component: mailhog
+    {{ mailhog.labels_def | to_nice_yaml() | indent(4) }}
+    {{ mailhog.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: mailhog
-      app.kubernetes.io/component: mailhog
+      {{ mailhog.labels_def | to_nice_yaml() | indent(6) }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: mailhog
-        app.kubernetes.io/component: mailhog
+        {{ mailhog.labels_def | to_nice_yaml() | indent(8) }}
+        {{ mailhog.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
       - name: mailhog
