--- a/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/networkPolicies.yaml.j2
@@ -4,14 +4,14 @@ metadata:
   name: allow-to-mailhog
   namespace: {{ mailhog.namespace }}
   labels:
-    app.kubernetes.io/name: mailhog
+    {{ mailhog.labels_def | to_nice_yaml() | indent(4) }}
+    {{ mailhog.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: mailhog
-      app.kubernetes.io/component: mailhog
+      {{ mailhog.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     # Allow http from the ingress controller
@@ -34,5 +34,4 @@ spec:
               name: {{ zonemta.namespace }}
           podSelector:
             matchLabels:
-              app.kubernetes.io/name: zonemta
-              app.kubernetes.io/component: zonemta
+              {{ zonemta.labels_def | to_nice_yaml() | indent(14) }}
