--- a/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/ingress.yaml.j2
@@ -4,7 +4,8 @@ metadata:
   name: gotify
   namespace: {{ gotify.namespace }}
   labels:
-    app.kubernetes.io/name: gotify
+    {{ gotify.labels_def | to_nice_yaml() | indent(4) }}
+    {{ gotify.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: "/$1"
     nginx.ingress.kubernetes.io/configuration-snippet: |
