--- a/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/networkPolicies.yaml.j2
@@ -4,14 +4,14 @@ metadata:
   name: allow-to-gotify
   namespace: {{ gotify.namespace }}
   labels:
-    app.kubernetes.io/name: gotify
+    {{ gotify.labels_def | to_nice_yaml() | indent(4) }}
+    {{ gotify.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: gotify
-      app.kubernetes.io/component: gotify
+      {{ gotify.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     - ports:
