--- a/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/service.yaml.j2
@@ -4,13 +4,12 @@ metadata:
   name: gotify
   namespace: {{ gotify.namespace }}
   labels:
-    app.kubernetes.io/name: gotify
-    app.kubernetes.io/component: gotify
+    {{ gotify.labels_def | to_nice_yaml() | indent(4) }}
+    {{ gotify.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   type: NodePort
   ports:
     - port: 80
       targetPort: 80
   selector:
-    app.kubernetes.io/name: gotify
-    app.kubernetes.io/component: gotify
+    {{ gotify.labels_def | to_nice_yaml() | indent(4) }}
