--- a/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/statefulSet.yaml.j2
@@ -4,22 +4,21 @@ metadata:
   name: gotify
   namespace: {{ gotify.namespace }}
   labels:
-    app.kubernetes.io/name: gotify
-    app.kubernetes.io/component: gotify
+    {{ gotify.labels_def | to_nice_yaml() | indent(4) }}
+    {{ gotify.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: gotify
-      app.kubernetes.io/component: gotify
+      {{ gotify.labels_def | to_nice_yaml() | indent(6) }}
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: gotify
-        app.kubernetes.io/component: gotify
+        {{ gotify.labels_def | to_nice_yaml() | indent(8) }}
+        {{ gotify.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
       - image: "{{ gotify.container.image }}"
@@ -62,5 +61,4 @@ spec:
           storage: 256M
       selector:
         matchLabels:
-          app.kubernetes.io/name: gotify
-          app.kubernetes.io/component: gotify
+          {{ gotify.labels_def | to_nice_yaml() | indent(10) }}
