Clean labels for auth-openldap

--- a/ansible/install_applications/roles/auth-openldap.deploy/app/deploy/secret-config.yaml.j2
+++ b/ansible/install_applications/roles/auth-openldap.deploy/app/deploy/secret-config.yaml.j2
@@ -4,8 +4,8 @@ metadata:
   name: openldap-config
   namespace: {{ openldap.namespace }}
   labels:
-    app.kubernetes.io/name: openldap
-    app.kubernetes.io/component: openldap
+    {{ openldap.labels_def | to_nice_yaml() | indent(4) }}
+    {{ openldap.labels_desc | to_nice_yaml() | indent(4) }}
 data:
 {% for openldap_config_file in openldap_config_files %}
   {{ openldap_config_file | basename | replace(".j2", "") }}: {{ lookup(openldap_config_file | regex_search('.j2$') | ternary('template','file'), openldap_config_file) | b64encode }}
