--- a/ansible/install_applications/roles/auth-phpldapadmin.deploy/app/deploy/secret-config.yaml.j2
+++ b/ansible/install_applications/roles/auth-phpldapadmin.deploy/app/deploy/secret-config.yaml.j2
@@ -4,8 +4,8 @@ metadata:
   name: phpldapadmin-config
   namespace: {{ phpldapadmin.namespace }}
   labels:
-    app.kubernetes.io/name: phpldapadmin
-    app.kubernetes.io/component: phpldapadmin
+    {{ phpldapadmin.labels_def | to_nice_yaml() | indent(4) }}
+    {{ phpldapadmin.labels_desc | to_nice_yaml() | indent(4) }}
 data:
 {% for phpldapadmin_config_file in phpldapadmin_config_files %}
   {{ phpldapadmin_config_file | basename | replace(".j2", "") }}: {{ lookup(phpldapadmin_config_file | regex_search('.j2$') | ternary('template','file'), phpldapadmin_config_file) | b64encode }}
