--- a/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/networkPolicies.yaml.j2
@@ -4,14 +4,14 @@ metadata:
   name: allow-to-lemonldap
   namespace: {{ lemonldap.namespace }}
   labels:
-    app.kubernetes.io/name: lemonldap
+    {{ lemonldap.labels_def | to_nice_yaml() | indent(4) }}
+    {{ lemonldap.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: lemonldap
-      app.kubernetes.io/component: lemonldap
+      {{ lemonldap.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     # Allow http from the ingress controller
