--- a/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/service.yaml.j2
@@ -4,11 +4,11 @@ metadata:
   name: lemonldap
   namespace: {{ lemonldap.namespace }}
   labels:
-    app.kubernetes.io/name: lemonldap
+    {{ lemonldap.labels_def | to_nice_yaml() | indent(4) }}
+    {{ lemonldap.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   ports:
   - port: 80
     name: http
   selector:
-    app.kubernetes.io/name: lemonldap
-    app.kubernetes.io/component: lemonldap
+    {{ lemonldap.labels_def | to_nice_yaml() | indent(4) }}
