--- a/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/statefulset.yaml.j2
@@ -4,23 +4,22 @@ metadata:
   name: lemonldap
   namespace: {{ lemonldap.namespace }}
   labels:
-    app.kubernetes.io/name: lemonldap
-    app.kubernetes.io/component: lemonldap
+    {{ lemonldap.labels_def | to_nice_yaml() | indent(4) }}
+    {{ lemonldap.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: lemonldap
-      app.kubernetes.io/component: lemonldap
+      {{ lemonldap.labels_def | to_nice_yaml() | indent(6) }}
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: lemonldap
-        app.kubernetes.io/component: lemonldap
+        {{ lemonldap.labels_def | to_nice_yaml() | indent(8) }}
+        {{ lemonldap.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       initContainers:
       - name: create-folders
@@ -92,6 +91,5 @@ spec:
           storage: 32M
       selector:
         matchLabels:
-          app.kubernetes.io/name: lemonldap
-          app.kubernetes.io/component: lemonldap
+          {{ lemonldap.labels_def | to_nice_yaml() | indent(10) }}
           storage: data
