--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/statefulSet.yaml.j2
@@ -4,8 +4,8 @@ metadata:
   name: elasticsearch
   namespace: {{ elasticsearch.namespace }}
   labels:
-    app.kubernetes.io/name: elasticsearch
-    app.kubernetes.io/component: elasticsearch
+    {{ elasticsearch.labels_def | to_nice_yaml() | indent(4) }}
+    {{ elasticsearch.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
@@ -13,13 +13,12 @@ spec:
   replicas: {{ elasticsearch.replicas }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: elasticsearch
-      app.kubernetes.io/component: elasticsearch
+      {{ elasticsearch.labels_def | to_nice_yaml() | indent(6) }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: elasticsearch
-        app.kubernetes.io/component: elasticsearch
+        {{ elasticsearch.labels_def | to_nice_yaml() | indent(8) }}
+        {{ elasticsearch.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
       - name: elasticsearch
@@ -58,7 +57,7 @@ spec:
           subPath: ca.crt
         env:
           - name: cluster.name
-            value: k8s-logs
+            value: {{ elasticsearch.cluster_name }}
           - name: node.name
             valueFrom:
               fieldRef:
@@ -119,5 +118,4 @@ spec:
           storage: 4G
       selector:
         matchLabels:
-          app.kubernetes.io/name: elasticsearch
-          app.kubernetes.io/component: elasticsearch
+          {{ elasticsearch.labels_def | to_nice_yaml() | indent(10) }}
