--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/networkPolicies.yaml.j2
@@ -45,8 +45,7 @@ spec:
               name: {{ fluentd.namespace }}
           podSelector:
             matchLabels:
-              app.kubernetes.io/name: fluentd
-              app.kubernetes.io/component: fluentd
+              {{ fluentd.labels_def | to_nice_yaml() | indent(14) }}
 
     # Allow from elasticsearch nodes
     - ports:
