--- a/ansible/install_applications/roles/logging-fluentd.deploy/app/deploy/configMap-config.yaml.j2
+++ b/ansible/install_applications/roles/logging-fluentd.deploy/app/deploy/configMap-config.yaml.j2
@@ -4,8 +4,8 @@ metadata:
   name: fluentd-config
   namespace: {{ fluentd.namespace }}
   labels:
-    app.kubernetes.io/name: fluentd
-    app.kubernetes.io/component: fluentd
+    {{ fluentd.labels_def | to_nice_yaml() | indent(4) }}
+    {{ fluentd.labels_desc | to_nice_yaml() | indent(4) }}
 data:
   fluent.conf: |
     {{ lookup('file', role_path + '/app/config/fluent.conf')  | replace('\n', '\n    ') }}
