--- a/ansible/install_applications/roles/logging-fluentd.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/logging-fluentd.deploy/app/deploy/deployment.yaml.j2
@@ -4,21 +4,20 @@ metadata:
   name: fluentd
   namespace: {{ fluentd.namespace }}
   labels:
-    app.kubernetes.io/name: fluentd
-    app.kubernetes.io/component: fluentd
+    {{ fluentd.labels_def | to_nice_yaml() | indent(4) }}
+    {{ fluentd.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: fluentd
-      app.kubernetes.io/component: fluentd
+      {{ fluentd.labels_def | to_nice_yaml() | indent(6) }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: fluentd
-        app.kubernetes.io/component: fluentd
+        {{ fluentd.labels_def | to_nice_yaml() | indent(8) }}
+        {{ fluentd.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
       - name: fluentd
