--- a/ansible/install_applications/roles/logging-fluentd.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/logging-fluentd.deploy/app/deploy/networkPolicies.yaml.j2
@@ -4,14 +4,14 @@ metadata:
   name: allow-to-fluentd
   namespace: {{ fluentd.namespace }}
   labels:
-    app.kubernetes.io/name: fluentd
+    {{ fluentd.labels_def | to_nice_yaml() | indent(4) }}
+    {{ fluentd.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: fluentd
-      app.kubernetes.io/component: fluentd
+      {{ fluentd.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     # Allow from fluent-bit
