--- a/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/service-account.yaml.j2
+++ b/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/service-account.yaml.j2
@@ -3,3 +3,6 @@ kind: ServiceAccount
 metadata:
   name: fluent-bit
   namespace: {{ fluentbit.namespace }}
+  labels:
+    {{ fluentbit.labels_def | to_nice_yaml() | indent(4) }}
+    {{ fluentbit.labels_desc | to_nice_yaml() | indent(4) }}
