--- a/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/daemonSet.yaml.j2
@@ -4,24 +4,23 @@ metadata:
   name: fluent-bit
   namespace: {{ fluentbit.namespace }}
   labels:
-    app.kubernetes.io/name: fluent-bit
-    app.kubernetes.io/component: fluent-bit
+    {{ fluentbit.labels_def | to_nice_yaml() | indent(4) }}
+    {{ fluentbit.labels_desc | to_nice_yaml() | indent(4) }}
     kubernetes.io/cluster-service: "true"
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: fluent-bit
-      app.kubernetes.io/component: fluent-bit
+      {{ fluentbit.labels_def | to_nice_yaml() | indent(6) }}
       kubernetes.io/cluster-service: "true"
   updateStrategy:
     type: RollingUpdate
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: fluent-bit
-        app.kubernetes.io/component: fluent-bit
+        {{ fluentbit.labels_def | to_nice_yaml() | indent(8) }}
+        {{ fluentbit.labels_desc | to_nice_yaml() | indent(8) }}
         kubernetes.io/cluster-service: "true"
       annotations:
         prometheus.io/scrape: "true"
