--- a/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/networkPolicies.yaml.j2
@@ -4,14 +4,14 @@ metadata:
   name: allow-to-fluentbit
   namespace: {{ fluentbit.namespace }}
   labels:
-    app.kubernetes.io/name: fluent-bit
+    {{ fluentbit.labels_def | to_nice_yaml() | indent(4) }}
+    {{ fluentbit.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: fluent-bit
-      app.kubernetes.io/component: fluent-bit
+      {{ fluentbit.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     # Allow from prometheus
