--- a/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/service-prometheus.yaml.j2
+++ b/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/service-prometheus.yaml.j2
@@ -4,8 +4,8 @@ metadata:
   name: fluent-bit-prometheus
   namespace: {{ fluentbit.namespace }}
   labels:
-    app.kubernetes.io/name: fluent-bit
-    app.kubernetes.io/component: fluent-bit
+    {{ fluentbit.labels_def | to_nice_yaml() | indent(4) }}
+    {{ fluentbit.labels_desc | to_nice_yaml() | indent(4) }}
     prometheus-target: fluent-bit
 spec:
   ports:
@@ -13,5 +13,4 @@ spec:
     name: metrics
     targetPort: metrics
   selector:
-    app.kubernetes.io/name: fluent-bit
-    app.kubernetes.io/component: fluent-bit
+    {{ fluentbit.labels_def | to_nice_yaml() | indent(4) }}
