--- a/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/configMap.yaml.j2
+++ b/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/configMap.yaml.j2
@@ -4,8 +4,8 @@ metadata:
   name: kibana
   namespace: {{ kibana.namespace }}
   labels:
-    app.kubernetes.io/name: kibana
-    app.kubernetes.io/component: kibana
+    {{ kibana.labels_def | to_nice_yaml() | indent(4) }}
+    {{ kibana.labels_desc | to_nice_yaml() | indent(4) }}
 data:
   kibana.yml: |
     {{ lookup('template', role_path + '/app/config/kibana.yml.j2') | replace('\n', '\n    ') }}
