--- a/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/deployment.yaml.j2
@@ -4,19 +4,18 @@ metadata:
   name: kibana
   namespace: {{ kibana.namespace }}
   labels:
-    app.kubernetes.io/name: kibana
-    app.kubernetes.io/component: kibana
+    {{ kibana.labels_def | to_nice_yaml() | indent(4) }}
+    {{ kibana.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: kibana
-      app.kubernetes.io/component: kibana
+      {{ kibana.labels_def | to_nice_yaml() | indent(6) }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: kibana
-        app.kubernetes.io/component: kibana
+        {{ kibana.labels_def | to_nice_yaml() | indent(8) }}
+        {{ kibana.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
       - name: kibana
