--- a/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/ingress.yaml.j2
@@ -4,7 +4,8 @@ metadata:
   name: kibana
   namespace: {{ kibana.namespace }}
   labels:
-    app.kubernetes.io/name: kibana
+    {{ kibana.labels_def | to_nice_yaml() | indent(4) }}
+    {{ kibana.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   tls:
     - hosts:
