--- a/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/service.yaml.j2
@@ -4,10 +4,10 @@ metadata:
   name: kibana
   namespace: {{ kibana.namespace }}
   labels:
-    app.kubernetes.io/name: kibana
+    {{ kibana.labels_def | to_nice_yaml() | indent(4) }}
+    {{ kibana.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   ports:
   - port: 5601
   selector:
-    app.kubernetes.io/name: kibana
-    app.kubernetes.io/component: kibana
+    {{ kibana.labels_def | to_nice_yaml() | indent(4) }}
