--- a/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/deployment.yaml.j2
@@ -1,22 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
-    app.kubernetes.io/name: kube-state-metrics
-    app.kubernetes.io/component: kube-state-metrics
   name: kube-state-metrics
   namespace: {{ kube_state_metrics.namespace }}
+  labels:
+    {{ kube_state_metrics.labels_def | to_nice_yaml() | indent(4) }}
+    {{ kube_state_metrics.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: kube-state-metrics
-      app.kubernetes.io/component: kube-state-metrics
+      {{ kube_state_metrics.labels_def | to_nice_yaml() | indent(6) }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: kube-state-metrics
-        app.kubernetes.io/component: kube-state-metrics
+        {{ kube_state_metrics.labels_def | to_nice_yaml() | indent(8) }}
+        {{ kube_state_metrics.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
       - args:
