--- a/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/networkPolicies.yaml.j2
@@ -4,14 +4,14 @@ metadata:
   name: allow-to-kube-state-metrics
   namespace: {{ kube_state_metrics.namespace }}
   labels:
-      app.kubernetes.io/name: kube-state-metrics
+    {{ kube_state_metrics.labels_def | to_nice_yaml() | indent(4) }}
+    {{ kube_state_metrics.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: kube-state-metrics
-      app.kubernetes.io/component: kube-state-metrics
+      {{ kube_state_metrics.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     # Allow from prometheus
