--- a/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/role.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/role.yaml.j2
@@ -3,6 +3,9 @@ kind: Role
 metadata:
   name: kube-state-metrics
   namespace: {{ kube_state_metrics.namespace }}
+  labels:
+    {{ kube_state_metrics.labels_def | to_nice_yaml() | indent(4) }}
+    {{ kube_state_metrics.labels_desc | to_nice_yaml() | indent(4) }}
 rules:
 - apiGroups:
   - ""
