--- a/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/daemonSet.yaml.j2
@@ -1,21 +1,20 @@
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
-  labels:
-    app.kubernetes.io/name: node-exporter
-    app.kubernetes.io/component: node-exporter
   name: node-exporter
   namespace: {{ node_exporter.namespace }}
+  labels:
+    {{ node_exporter.labels_def | to_nice_yaml() | indent(4) }}
+    {{ node_exporter.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: node-exporter
-      app.kubernetes.io/component: node-exporter
+      {{ node_exporter.labels_def | to_nice_yaml() | indent(6) }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: node-exporter
-        app.kubernetes.io/component: node-exporter
+        {{ node_exporter.labels_def | to_nice_yaml() | indent(8) }}
+        {{ node_exporter.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
       - args:
