--- a/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/networkPolicies.yaml.j2
@@ -4,14 +4,14 @@ metadata:
   name: allow-to-node-exporter
   namespace: {{ node_exporter.namespace }}
   labels:
-    app.kubernetes.io/name: node-exporter
+    {{ node_exporter.labels_def | to_nice_yaml() | indent(4) }}
+    {{ node_exporter.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: node-exporter
-      app.kubernetes.io/component: node-exporter
+      {{ node_exporter.labels_def | to_nice_yaml() | indent(6) }}
 
 #  # node-exporter runs with `hostNetwork: true`, so NetworkPolicies don't apply
 #  ingress:
