--- a/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/service.yaml.j2
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app.kubernetes.io/name: node-exporter
-    prometheus-target: node-exporter
   name: node-exporter
   namespace: {{ node_exporter.namespace }}
+  labels:
+    {{ node_exporter.labels_def | to_nice_yaml() | indent(4) }}
+    {{ node_exporter.labels_desc | to_nice_yaml() | indent(4) }}
+    prometheus-target: node-exporter
 spec:
   clusterIP: None
   ports:
@@ -13,4 +14,4 @@ spec:
     port: 9100
     targetPort: https
   selector:
-    app.kubernetes.io/name: node-exporter
+    {{ node_exporter.labels_def | to_nice_yaml() | indent(4) }}
