--- a/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/serviceAccount.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/serviceAccount.yaml.j2
@@ -3,3 +3,6 @@ kind: ServiceAccount
 metadata:
   name: node-exporter
   namespace: {{ node_exporter.namespace }}
+  labels:
+    {{ node_exporter.labels_def | to_nice_yaml() | indent(4) }}
+    {{ node_exporter.labels_desc | to_nice_yaml() | indent(4) }}
