--- a/ansible/install_applications/roles/monitoring-nginx-exporter.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-nginx-exporter.deploy/app/deploy/daemonSet.yaml.j2
@@ -4,18 +4,17 @@ metadata:
   name: nginx-exporter
   namespace: {{ nginx_exporter.namespace }}
   labels:
-    app.kubernetes.io/name: nginx-exporter
-    app.kubernetes.io/component: nginx-exporter
+    {{ nginx_exporter.labels_def | to_nice_yaml() | indent(4) }}
+    {{ nginx_exporter.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: nginx-exporter
-      app.kubernetes.io/component: nginx-exporter
+      {{ nginx_exporter.labels_def | to_nice_yaml() | indent(6) }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: nginx-exporter
-        app.kubernetes.io/component: nginx-exporter
+        {{ nginx_exporter.labels_def | to_nice_yaml() | indent(8) }}
+        {{ nginx_exporter.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
       - name: nginx-exporter
