--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/nginx-exporter.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/nginx-exporter.yaml.j2
@@ -2,7 +2,8 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    app.kubernetes.io/name: nginx-exporter
+    {{ nginx_exporter.labels_def | to_nice_yaml() | indent(4) }}
+    {{ nginx_exporter.labels_desc | to_nice_yaml() | indent(4) }}
   name: nginx-exporter
   namespace: {{ prometheus.namespace }}
 spec:
