Clean labels for monitoring-nginx-log-exporter

--- a/ansible/install_applications/roles/monitoring-nginx-log-exporter.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-nginx-log-exporter.deploy/app/deploy/daemonSet.yaml.j2
@@ -4,20 +4,19 @@ metadata:
   name: nginx-log-exporter
   namespace: {{ nginx_log_exporter.namespace }}
   labels:
-    app.kubernetes.io/name: nginx-log-exporter
-    app.kubernetes.io/component: nginx-log-exporter
+    {{ nginx_log_exporter.labels_def | to_nice_yaml() | indent(4) }}
+    {{ nginx_log_exporter.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: nginx-log-exporter
-      app.kubernetes.io/component: nginx-log-exporter
+      {{ nginx_log_exporter.labels_def | to_nice_yaml() | indent(6) }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: nginx-log-exporter
-        app.kubernetes.io/component: nginx-log-exporter
+        {{ nginx_log_exporter.labels_def | to_nice_yaml() | indent(8) }}
+        {{ nginx_log_exporter.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
       - name: nginx-log-exporter
