--- a/ansible/install_applications/roles/monitoring-nginx-log-exporter.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-nginx-log-exporter.deploy/app/deploy/networkPolicies.yaml.j2
@@ -4,14 +4,14 @@ metadata:
   name: allow-to-nginx-log-exporter
   namespace: {{ nginx_log_exporter.namespace }}
   labels:
-    app.kubernetes.io/name: nginx-log-exporter
+    {{ nginx_log_exporter.labels_def | to_nice_yaml() | indent(4) }}
+    {{ nginx_log_exporter.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: nginx-log-exporter
-      app.kubernetes.io/component: nginx-log-exporter
+      {{ nginx_log_exporter.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     # Allow from prometheus
