--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/deploy/deployment.yaml.j2
@@ -4,22 +4,21 @@ metadata:
   name: release-watcher
   namespace: {{ release_watcher.namespace }}
   labels:
-    app.kubernetes.io/name: release-watcher
-    app.kubernetes.io/component: release-watcher
+    {{ release_watcher.labels_def | to_nice_yaml() | indent(4) }}
+    {{ release_watcher.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: release-watcher
-      app.kubernetes.io/component: release-watcher
+      {{ release_watcher.labels_def | to_nice_yaml() | indent(6) }}
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: release-watcher
-        app.kubernetes.io/component: release-watcher
+        {{ release_watcher.labels_def | to_nice_yaml() | indent(8) }}
+        {{ release_watcher.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
       - image: "{{ release_watcher.container.image }}"
