--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/deploy/service-prometheus.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/deploy/service-prometheus.yaml.j2
@@ -4,8 +4,8 @@ metadata:
   name: release-watcher-prometheus
   namespace: {{ release_watcher.namespace }}
   labels:
-    app.kubernetes.io/name: release-watcher
-    app.kubernetes.io/component: release-watcher
+    {{ release_watcher.labels_def | to_nice_yaml() | indent(4) }}
+    {{ release_watcher.labels_desc | to_nice_yaml() | indent(4) }}
     prometheus-target: release-watcher
 spec:
   ports:
@@ -13,5 +13,4 @@ spec:
       name: metrics
       targetPort: metrics
   selector:
-    app.kubernetes.io/name: release-watcher
-    app.kubernetes.io/component: release-watcher
+    {{ release_watcher.labels_def | to_nice_yaml() | indent(4) }}
