--- a/ansible/install_applications/roles/monitoring-apcups-exporter.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-apcups-exporter.deploy/app/deploy/deployment.yaml.j2
@@ -4,20 +4,19 @@ metadata:
   name: apcups-exporter
   namespace: {{ apcups_exporter.namespace }}
   labels:
-    app.kubernetes.io/name: apcups-exporter
-    app.kubernetes.io/component: apcups-exporter
+    {{ apcups_exporter.labels_def | to_nice_yaml() | indent(4) }}
+    {{ apcups_exporter.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: apcups-exporter
-      app.kubernetes.io/component: apcups-exporter
+      {{ apcups_exporter.labels_def | to_nice_yaml() | indent(6) }}
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: apcups-exporter
-        app.kubernetes.io/component: apcups-exporter
+        {{ apcups_exporter.labels_def | to_nice_yaml() | indent(8) }}
+        {{ apcups_exporter.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
       - image: "{{ apcups_exporter.container.image }}"
