--- a/ansible/install_applications/roles/monitoring-apcups-exporter.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-apcups-exporter.deploy/app/deploy/networkPolicies.yaml.j2
@@ -4,14 +4,14 @@ metadata:
   name: allow-to-apcups-exporter
   namespace: {{ apcups_exporter.namespace }}
   labels:
-    app.kubernetes.io/name: apcups-exporter
+    {{ apcups_exporter.labels_def | to_nice_yaml() | indent(4) }}
+    {{ apcups_exporter.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: apcups-exporter
-      app.kubernetes.io/component: apcups-exporter
+      {{ apcups_exporter.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     # Allow from prometheus
