--- a/ansible/install_applications/roles/monitoring-apcups-exporter.deploy/app/deploy/service-prometheus.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-apcups-exporter.deploy/app/deploy/service-prometheus.yaml.j2
@@ -4,8 +4,8 @@ metadata:
   name: apcups-exporter-prometheus
   namespace: {{ apcups_exporter.namespace }}
   labels:
-    app.kubernetes.io/name: apcups-exporter
-    app.kubernetes.io/component: apcups-exporter
+    {{ apcups_exporter.labels_def | to_nice_yaml() | indent(4) }}
+    {{ apcups_exporter.labels_desc | to_nice_yaml() | indent(4) }}
     prometheus-target: apcups-exporter
 spec:
   ports:
@@ -13,5 +13,4 @@ spec:
       name: metrics
       targetPort: metrics
   selector:
-    app.kubernetes.io/name: apcups-exporter
-    app.kubernetes.io/component: apcups-exporter
+    {{ apcups_exporter.labels_def | to_nice_yaml() | indent(4) }}
