--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/networkPolicies.yaml.j2
@@ -81,5 +81,4 @@ spec:
               name: {{ prometheus.namespace }}
           podSelector:
             matchLabels:
-              app.kubernetes.io/name: prometheus
-              prometheus: k8s
+              {{ prometheus.labels_def | to_nice_yaml() | indent(14) }}
