--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/alertmanager/alertmanager.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/alertmanager/alertmanager.yaml.j2
@@ -1,15 +1,18 @@
 apiVersion: monitoring.coreos.com/v1
 kind: Alertmanager
 metadata:
-  labels:
-    app.kubernetes.io/name: alertmanager
-    app.kubernetes.io/component: alertmanager
-    alertmanager: main
-  name: main
+  name: k8s
   namespace: {{ prometheus.namespace }}
+  labels:
+    {{ alertmanager.labels_def | to_nice_yaml() | indent(4) }}
+    {{ alertmanager.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   baseImage: "{{ alertmanager.base_image.repo }}/{{ alertmanager.base_image.name }}"
   version: "{{ alertmanager.base_image.tag }}"
+  podMetadata:
+    labels:
+      {{ alertmanager.labels_def | to_nice_yaml() | indent(6) }}
+      {{ alertmanager.labels_desc | to_nice_yaml() | indent(6) }}
   nodeSelector:
     kubernetes.io/os: linux
     capability/general-purpose: 'yes'
@@ -28,4 +31,4 @@ spec:
     fsGroup: 2000
     runAsNonRoot: true
     runAsUser: 1000
-  serviceAccountName: alertmanager-main
+  serviceAccountName: alertmanager-k8s
