--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/alertmanager/secret.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/alertmanager/secret.yaml.j2
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: alertmanager-main
+  name: alertmanager-k8s
   namespace: {{ prometheus.namespace }}
   labels:
-    app.kubernetes.io/name: alertmanager
-    app.kubernetes.io/component: alertmanager
+    {{ alertmanager.labels_def | to_nice_yaml() | indent(4) }}
+    {{ alertmanager.labels_desc | to_nice_yaml() | indent(4) }}
 type: Opaque
 data:
 {% for alertmanager_config_file in alertmanager_config_files %}
