--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/rules/node_alerts.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/rules/node_alerts.yaml.j2
@@ -3,17 +3,17 @@ kind: PrometheusRule
 metadata:
   name: node-alerts
   labels:
-    app.kubernetes.io/name: prometheus
-    app.kubernetes.io/component: prometheus
-    prometheus: k8s
+    {{ prometheus.labels_def | to_nice_yaml() | indent(4) }}
+    {{ prometheus.labels_desc | to_nice_yaml() | indent(4) }}
     role: alert-rules
 spec:
+{% raw %}
   "groups":
     - "name": "node-exporter"
       "rules":
         - "alert": "NodeFilesystemSpaceFillingUp"
           "annotations":
-        "description": "Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf \"%.2f\" $value }}% available space left and is filling up."
+            "description": "Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf \"%.2f\" $value }}% available space left and is filling up."
             "summary": "Filesystem is predicted to run out of space within the next 24 hours."
           "expr": |
             (
@@ -28,7 +28,7 @@ spec:
             "severity": "warning"
         - "alert": "NodeFilesystemSpaceFillingUp"
           "annotations":
-        "description": "Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf \"%.2f\" $value }}% available space left and is filling up fast."
+            "description": "Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf \"%.2f\" $value }}% available space left and is filling up fast."
             "summary": "Filesystem is predicted to run out of space within the next 4 hours."
           "expr": |
             (
@@ -43,7 +43,7 @@ spec:
             "severity": "critical"
         - "alert": "NodeFilesystemAlmostOutOfSpace"
           "annotations":
-        "description": "Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf \"%.2f\" $value }}% available space left."
+            "description": "Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf \"%.2f\" $value }}% available space left."
             "summary": "Filesystem has less than 5% space left."
           "expr": |
             (
@@ -56,7 +56,7 @@ spec:
             "severity": "warning"
         - "alert": "NodeFilesystemAlmostOutOfSpace"
           "annotations":
-        "description": "Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf \"%.2f\" $value }}% available space left."
+            "description": "Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf \"%.2f\" $value }}% available space left."
             "summary": "Filesystem has less than 3% space left."
           "expr": |
             (
@@ -69,7 +69,7 @@ spec:
             "severity": "critical"
         - "alert": "NodeFilesystemFilesFillingUp"
           "annotations":
-        "description": "Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf \"%.2f\" $value }}% available inodes left and is filling up."
+            "description": "Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf \"%.2f\" $value }}% available inodes left and is filling up."
             "summary": "Filesystem is predicted to run out of inodes within the next 24 hours."
           "expr": |
             (
@@ -84,7 +84,7 @@ spec:
             "severity": "warning"
         - "alert": "NodeFilesystemFilesFillingUp"
           "annotations":
-        "description": "Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf \"%.2f\" $value }}% available inodes left and is filling up fast."
+            "description": "Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf \"%.2f\" $value }}% available inodes left and is filling up fast."
             "summary": "Filesystem is predicted to run out of inodes within the next 4 hours."
           "expr": |
             (
@@ -99,7 +99,7 @@ spec:
             "severity": "critical"
         - "alert": "NodeFilesystemAlmostOutOfFiles"
           "annotations":
-        "description": "Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf \"%.2f\" $value }}% available inodes left."
+            "description": "Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf \"%.2f\" $value }}% available inodes left."
             "summary": "Filesystem has less than 5% inodes left."
           "expr": |
             (
@@ -112,7 +112,7 @@ spec:
             "severity": "warning"
         - "alert": "NodeFilesystemAlmostOutOfFiles"
           "annotations":
-        "description": "Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf \"%.2f\" $value }}% available inodes left."
+            "description": "Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ printf \"%.2f\" $value }}% available inodes left."
             "summary": "Filesystem has less than 3% inodes left."
           "expr": |
             (
@@ -125,7 +125,7 @@ spec:
             "severity": "critical"
         - "alert": "NodeNetworkReceiveErrs"
           "annotations":
-        "description": "{{ $labels.instance }} interface {{ $labels.device }} has encountered {{ printf \"%.0f\" $value }} receive errors in the last two minutes."
+            "description": "{{ $labels.instance }} interface {{ $labels.device }} has encountered {{ printf \"%.0f\" $value }} receive errors in the last two minutes."
             "summary": "Network interface is reporting many receive errors."
           "expr": |
             increase(node_network_receive_errs_total[2m]) > 10
@@ -134,10 +134,11 @@ spec:
             "severity": "warning"
         - "alert": "NodeNetworkTransmitErrs"
           "annotations":
-        "description": "{{ $labels.instance }} interface {{ $labels.device }} has encountered {{ printf \"%.0f\" $value }} transmit errors in the last two minutes."
+            "description": "{{ $labels.instance }} interface {{ $labels.device }} has encountered {{ printf \"%.0f\" $value }} transmit errors in the last two minutes."
             "summary": "Network interface is reporting many transmit errors."
           "expr": |
             increase(node_network_transmit_errs_total[2m]) > 10
           "for": "1h"
           "labels":
             "severity": "warning"
+{% endraw %}
