--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/alertmanager/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/alertmanager/networkPolicies.yaml.j2
@@ -1,18 +1,17 @@
 kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
-  name: allow-to-alertmanager-main
+  name: allow-to-alertmanager-k8s
   namespace: {{ prometheus.namespace }}
   labels:
-    app.kubernetes.io/name: alertmanager
-    alertmanager: main
+    {{ alertmanager.labels_def | to_nice_yaml() | indent(4) }}
+    {{ alertmanager.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: alertmanager
-      alertmanager: main
+      {{ alertmanager.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     - ports:
@@ -32,5 +31,4 @@ spec:
               name: {{ prometheus.namespace }}
           podSelector:
             matchLabels:
-              app.kubernetes.io/name: prometheus
-              prometheus: k8s
+              {{ prometheus.labels_def | to_nice_yaml() | indent(14) }}
