--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/alertmanager/serviceAccount.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/alertmanager/serviceAccount.yaml.j2
@@ -1,5 +1,8 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: alertmanager-main
+  name: alertmanager-k8s
   namespace: {{ prometheus.namespace }}
+  labels:
+    {{ alertmanager.labels_def | to_nice_yaml() | indent(4) }}
+    {{ alertmanager.labels_desc | to_nice_yaml() | indent(4) }}
