--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/clusterRole.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/clusterRole.yaml.j2
@@ -1,11 +1,10 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  labels:
-    app.kubernetes.io/component: controller
-    app.kubernetes.io/name: prometheus-operator
-    app.kubernetes.io/version: v0.33.0
   name: prometheus-operator
+  labels:
+    {{ prometheus_operator.labels_def | to_nice_yaml() | indent(4) }}
+    {{ prometheus_operator.labels_desc | to_nice_yaml() | indent(4) }}
 rules:
 - apiGroups:
   - apiextensions.k8s.io
