--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/deployment.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/deployment.yaml.j2
@@ -1,24 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
-    app.kubernetes.io/component: controller
-    app.kubernetes.io/name: prometheus-operator
-    app.kubernetes.io/version: {{ prometheus_operator.base_image.tag }}
   name: prometheus-operator
   namespace: {{ prometheus.namespace }}
+  labels:
+    {{ prometheus_operator.labels_def | to_nice_yaml() | indent(4) }}
+    {{ prometheus_operator.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/component: controller
-      app.kubernetes.io/name: prometheus-operator
+      {{ prometheus_operator.labels_def | to_nice_yaml() | indent(6) }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/component: controller
-        app.kubernetes.io/name: prometheus-operator
-        app.kubernetes.io/version: {{ prometheus_operator.base_image.tag }}
+        {{ prometheus_operator.labels_def | to_nice_yaml() | indent(8) }}
+        {{ prometheus_operator.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
       - args:
