--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/serviceAccount.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/serviceAccount.yaml.j2
@@ -1,9 +1,8 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  labels:
-    app.kubernetes.io/component: controller
-    app.kubernetes.io/name: prometheus-operator
-    app.kubernetes.io/version: v0.33.0
   name: prometheus-operator
   namespace: {{ prometheus.namespace }}
+  labels:
+    {{ prometheus_operator.labels_def | to_nice_yaml() | indent(4) }}
+    {{ prometheus_operator.labels_desc | to_nice_yaml() | indent(4) }}
