--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/networkPolicies.yaml.j2
@@ -4,15 +4,14 @@ metadata:
   name: allow-to-prometheus-k8s
   namespace: {{ prometheus.namespace }}
   labels:
-    app.kubernetes.io/name: prometheus
-    prometheus: k8s
+    {{ prometheus.labels_def | to_nice_yaml() | indent(4) }}
+    {{ prometheus.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: prometheus
-      prometheus: k8s
+      {{ prometheus.labels_def | to_nice_yaml() | indent(4) }}
 
 
   ingress:
@@ -33,8 +32,7 @@ spec:
       from:
         - podSelector:
             matchLabels:
-              app.kubernetes.io/name: alertmanager
-              alertmanager: main
+              {{ alertmanager.labels_def | to_nice_yaml() | indent(14) }}
 
     # Allow from grafana
     - ports:
