--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/service.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/service.yaml.j2
@@ -1,18 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app.kubernetes.io/name: prometheus
-    prometheus: k8s
-    prometheus-target: prometheus-k8s
   name: prometheus-k8s
   namespace: {{ prometheus.namespace }}
+  labels:
+    {{ prometheus.labels_def | to_nice_yaml() | indent(4) }}
+    {{ prometheus.labels_desc | to_nice_yaml() | indent(4) }}
+    prometheus-target: prometheus-k8s
 spec:
   ports:
   - name: web
     port: 9090
     targetPort: web
   selector:
-    app.kubernetes.io/name: prometheus
-    prometheus: k8s
+    {{ prometheus.labels_def | to_nice_yaml() | indent(4) }}
   sessionAffinity: ClientIP
