--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/serviceAccount.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/serviceAccount.yaml.j2
@@ -3,3 +3,6 @@ kind: ServiceAccount
 metadata:
   name: prometheus-k8s
   namespace: {{ prometheus.namespace }}
+  labels:
+    {{ prometheus.labels_def | to_nice_yaml() | indent(4) }}
+    {{ prometheus.labels_desc | to_nice_yaml() | indent(4) }}
