--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/rules/gluster_rules.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/rules/gluster_rules.yaml.j2
@@ -3,11 +3,11 @@ kind: PrometheusRule
 metadata:
   name: gluster-rules
   labels:
-    app.kubernetes.io/name: gluster
-    app.kubernetes.io/component: gluster
-    prometheus: k8s
+    {{ prometheus.labels_def | to_nice_yaml() | indent(4) }}
+    {{ prometheus.labels_desc | to_nice_yaml() | indent(4) }}
     role: alert-rules
 spec:
+{% raw %}
   "groups":
     - "name": "gluster-volume.rules"
       "rules":
@@ -17,3 +17,4 @@ spec:
         - "expr": |
             sum(max(gluster_subvol_capacity_total_bytes{job="gluster-exporter"}) BY (volume, subvolume)) BY (volume)
           "record": "gluster:volume_capacity_total_bytes:sum"
+{% endraw %}
