--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/rules/kube_dns_alerts.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/rules/kube_dns_alerts.yaml.j2
@@ -3,11 +3,11 @@ kind: PrometheusRule
 metadata:
   name: kube-dns-alerts
   labels:
-    app.kubernetes.io/name: prometheus
-    app.kubernetes.io/component: prometheus
-    prometheus: k8s
+    {{ prometheus.labels_def | to_nice_yaml() | indent(4) }}
+    {{ prometheus.labels_desc | to_nice_yaml() | indent(4) }}
     role: alert-rules
 spec:
+{% raw %}
   groups:
     - name: kube-dns
       rules:
@@ -19,3 +19,4 @@ spec:
           annotations:
             summary: "CoreDNS Panic Count (instance {{ $labels.instance }})"
             description: "Number of CoreDNS panics encountered\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
+{% endraw %}
