--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/rules/prometheus_alerts.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/rules/prometheus_alerts.yaml.j2
@@ -3,11 +3,11 @@ kind: PrometheusRule
 metadata:
   name: prometheus-alerts
   labels:
-    app.kubernetes.io/name: prometheus
-    app.kubernetes.io/component: prometheus
-    prometheus: k8s
+    {{ prometheus.labels_def | to_nice_yaml() | indent(4) }}
+    {{ prometheus.labels_desc | to_nice_yaml() | indent(4) }}
     role: alert-rules
 spec:
+{% raw %}
   groups:
     - name: prometheus-alerts
       rules:
@@ -35,3 +35,4 @@ spec:
           annotations:
             summary: "Exporter down (instance {{ $labels.instance }})"
             description: "Prometheus exporter down\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
+{% endraw %}
