--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/rules/release-watcher_alerts.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/rules/release-watcher_alerts.yaml.j2
@@ -3,11 +3,11 @@ kind: PrometheusRule
 metadata:
   name: release-watcher-alerts
   labels:
-    app.kubernetes.io/name: prometheus
-    app.kubernetes.io/component: prometheus
-    prometheus: k8s
+    {{ prometheus.labels_def | to_nice_yaml() | indent(4) }}
+    {{ prometheus.labels_desc | to_nice_yaml() | indent(4) }}
     role: alert-rules
 spec:
+{% raw %}
   groups:
     - name: release-watcher
       rules:
@@ -25,3 +25,4 @@ spec:
           for: 5m
           labels:
             severity: critical
+{% endraw %}
