--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/dashboardProviders-configMap.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/dashboardProviders-configMap.yaml.j2
@@ -4,8 +4,8 @@ metadata:
   name: grafana-dashboard-providers
   namespace: {{ grafana.namespace }}
   labels:
-    app.kubernetes.io/name: grafana
-    app.kubernetes.io/component: grafana
+    {{ grafana.labels_def | to_nice_yaml() | indent(4) }}
+    {{ grafana.labels_desc | to_nice_yaml() | indent(4) }}
 data:
   dashboards.yaml: |-
     {
