--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/etc-configMap.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/etc-configMap.yaml.j2
@@ -4,8 +4,8 @@ metadata:
   name: grafana-etc
   namespace: {{ grafana.namespace }}
   labels:
-    app.kubernetes.io/name: grafana
-    app.kubernetes.io/component: grafana
+    {{ grafana.labels_def | to_nice_yaml() | indent(4) }}
+    {{ grafana.labels_desc | to_nice_yaml() | indent(4) }}
 data:
   grafana.ini: |
     {{ lookup('template', role_path + '/app/config/etc/grafana.ini.j2') | replace('\n', '\n    ') }}
