--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/ingress.yaml.j2
@@ -4,7 +4,8 @@ metadata:
   name: grafana
   namespace: {{ grafana.namespace }}
   labels:
-    app.kubernetes.io/name: grafana
+    {{ grafana.labels_def | to_nice_yaml() | indent(4) }}
+    {{ grafana.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: "/$1"
 spec:
