--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/service.yaml.j2
@@ -4,7 +4,8 @@ metadata:
   name: grafana
   namespace: {{ grafana.namespace }}
   labels:
-    app.kubernetes.io/name: grafana
+    {{ grafana.labels_def | to_nice_yaml() | indent(4) }}
+    {{ grafana.labels_desc | to_nice_yaml() | indent(4) }}
     prometheus-target: grafana
 spec:
   ports:
@@ -12,4 +13,4 @@ spec:
     port: 3000
     targetPort: http
   selector:
-    app.kubernetes.io/name: grafana
+    {{ grafana.labels_def | to_nice_yaml() | indent(4) }}
