--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/serviceAccount.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/serviceAccount.yaml.j2
@@ -3,3 +3,6 @@ kind: ServiceAccount
 metadata:
   name: grafana
   namespace: {{ grafana.namespace }}
+  labels:
+    {{ grafana.labels_def | to_nice_yaml() | indent(4) }}
+    {{ grafana.labels_desc | to_nice_yaml() | indent(4) }}
