--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/statefulSet.yaml.j2
@@ -2,8 +2,8 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   labels:
-    app.kubernetes.io/name: grafana
-    app.kubernetes.io/component: grafana
+    {{ grafana.labels_def | to_nice_yaml() | indent(4) }}
+    {{ grafana.labels_desc | to_nice_yaml() | indent(4) }}
   name: grafana
   namespace: {{ grafana.namespace }}
   annotations:
@@ -12,13 +12,12 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: grafana
-      app.kubernetes.io/component: grafana
+      {{ grafana.labels_def | to_nice_yaml() | indent(6) }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: grafana
-        app.kubernetes.io/component: grafana
+        {{ grafana.labels_def | to_nice_yaml() | indent(8) }}
+        {{ grafana.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
       - image: "{{ grafana.container.image }}"
@@ -103,5 +102,4 @@ spec:
           storage: 128M
       selector:
         matchLabels:
-          app.kubernetes.io/name: grafana
-          app.kubernetes.io/component: grafana
+          {{ grafana.labels_def | to_nice_yaml() | indent(10) }}
